<resources>
    <string name="app_name">ShoreLife</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchbar_hint">cari</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="description">Fish Detection to make a\nknowledge about fish</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t Have an Account?</string>
    <string name="signup">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Fullname</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="logout">Logout</string>
    <string name="card_home1">Let\'s Find for Fish</string>
</resources>
